syntax = "proto3";

option csharp_namespace = "EasyOrderProduct.Application.Contracts.Protos";

package inventory;

service InventoryChecker {
  rpc CheckAvailability (InventoryRequest) returns (InventoryResponse);
  rpc ReserveInventory  (QuantityRequest) returns (InventoryResponse); 
  rpc ReleaseInventory  (QuantityRequest) returns (InventoryResponse);
}

message QuantityRequest {
  int32 productItemId = 1;
  int32 quantity      = 2;
}

message InventoryRequest {
  int32 productItemId = 1;
}

message InventoryResponse {
  bool   isAvailable = 1;
  string message     = 2;
}
